--- a/index.html
+++ b/index.html
@@ -4,7 +4,40 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Alterar Cor de Fundo</title>
-  <link rel="stylesheet" href="estilos/style.css">
+  <style>
+    @charset "UTF-8";
+
+body {
+    font-family: Arial, sans-serif;
+    background-color: #f0f0f0;
+}
+  
+.container {
+    max-width: 400px;
+    margin: 50px auto;
+    padding: 20px;
+    background-color: #fff;
+    border-radius: 5px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
+  
+h2 {
+    margin-top: 0;
+}
+  
+label {
+    display: block;
+    margin-bottom: 10px;
+}
+  
+input[type="color"] {
+    width: 100%;
+    padding: 10px;
+    border: 1px solid #ccc;
+    border-radius: 5px; 
+}
+
+  </style>
 </head>
 <body>
   <div class="container">
